Fix #414 collapse animation

--- a/src/scss/components/_collapse.scss
+++ b/src/scss/components/_collapse.scss
@@ -4,6 +4,6 @@
         cursor: pointer;
     }
     .collapse-content {
-        display: inline;
+        display: inherit;
     }
 }
